ws-slo/apps/vaultwarden/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  sessionAffinity: ClientIP
  ports:
    - name: https
      appProtocol: https
      port: 443
      targetPort: https
  selector:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
